// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vlt-accordion should be rendered 1`] = `
<div
  class="accordion Vlt-accordion"
  id="accq"
>
  
  
</div>
`;

exports[`vlt-accordion-item should be with the active class 1`] = `
<div
  class="Vlt-accordion__item_opened Vlt-accordion__item"
>
  <div
    class="Vlt-accordion__trigger_active Vlt-accordion__trigger"
  >
    
    <div>
      Need header content
    </div>
    
  </div>
  <div
    class="Vlt-accordion__content_open Vlt-accordion__content"
  >
    
    
  </div>
</div>
`;

exports[`vlt-accordion-item should be with the active class after trigger is clicked 1`] = `
<div
  class="Vlt-accordion__item_opened Vlt-accordion__item"
>
  <div
    class="Vlt-accordion__trigger_active Vlt-accordion__trigger"
  >
    
    <div>
      Need header content
    </div>
    
  </div>
  <div
    class="Vlt-accordion__content_open Vlt-accordion__content"
  >
    
    
  </div>
</div>
`;

exports[`vlt-accordion-item should be without the active class 1`] = `
<div
  class="Vlt-accordion__item"
>
  <div
    class="Vlt-accordion__trigger"
  >
    
    <div>
      Need header content
    </div>
    
  </div>
  <div
    class="Vlt-accordion__content"
  >
    
    
  </div>
</div>
`;
